Adopt to Jogl/GlueGen changes