@@ -1,21 +1,21 @@
 /*
  * Copyright (c) 2005 Sun Microsystems, Inc. All Rights Reserved.
- * 
+ *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
  * met:
- * 
+ *
  * - Redistribution of source code must retain the above copyright
  *   notice, this list of conditions and the following disclaimer.
- * 
+ *
  * - Redistribution in binary form must reproduce the above copyright
  *   notice, this list of conditions and the following disclaimer in the
  *   documentation and/or other materials provided with the distribution.
- * 
+ *
  * Neither the name of Sun Microsystems, Inc. or the names of
  * contributors may be used to endorse or promote products derived from
  * this software without specific prior written permission.
- * 
+ *
  * This software is provided "AS IS," without a warranty of any kind. ALL
  * EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES,
  * INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A
@@ -28,11 +28,11 @@
  * DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY,
  * ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF
  * SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
- * 
+ *
  * You acknowledge that this software is not designed or intended for use
  * in the design, construction, operation or maintenance of any nuclear
  * facility.
- * 
+ *
  * Sun gratefully acknowledges that this software was originally authored
  * and developed by Kenneth Bradley Russell and Christopher John Kline.
  */
@@ -85,7 +85,7 @@ public class Main {
     } else if (rotationEnabled) {
       style = XTBasicTransitionManager.STYLE_ROTATE;
     }
-    XTBasicTransitionManager.Direction direction = null;    
+    XTBasicTransitionManager.Direction direction = null;
     switch (random.nextInt(4)) {
       case 0:  direction = XTBasicTransitionManager.DIR_LEFT;  break;
       case 1:  direction = XTBasicTransitionManager.DIR_RIGHT; break;
@@ -95,20 +95,20 @@ public class Main {
     transManager.setNextTransition(style, direction, fade);
   }
 
-  private void addWindow(int which) {
-    JInternalFrame frame = new JInternalFrame();
+  private void addWindow(final int which) {
+    final JInternalFrame frame = new JInternalFrame();
     frame.setResizable(true);
     frame.setClosable(true);
     frame.setVisible(true);
-    
+
     switch (which) {
       case TABLE:
       {
         frame.setTitle("Table Example");
-        Object[][] data = produceTableData(3, 20);
-        DefaultTableModel model = new DefaultTableModel(data, new String[] { "A", "B", "C" });
-        JTable table = new JTable(model);
-        JScrollPane scrollPane = new JScrollPane(table);
+        final Object[][] data = produceTableData(3, 20);
+        final DefaultTableModel model = new DefaultTableModel(data, new String[] { "A", "B", "C" });
+        final JTable table = new JTable(model);
+        final JScrollPane scrollPane = new JScrollPane(table);
         frame.getContentPane().add(scrollPane);
         break;
       }
@@ -116,9 +116,9 @@ public class Main {
       case TREE:
       {
         frame.setTitle("Tree Example");
-        DefaultMutableTreeNode root = new DefaultMutableTreeNode();
+        final DefaultMutableTreeNode root = new DefaultMutableTreeNode();
         populateTree(root, 2);
-        JTree tree = new JTree(root);
+        final JTree tree = new JTree(root);
         tree.setRootVisible(false);
         frame.getContentPane().add(tree);
         break;
@@ -131,27 +131,28 @@ public class Main {
     frame.setLocation(loc);
     loc = new Point((loc.x + 20) % desktop.getWidth(), (loc.y + 20) % desktop.getHeight());
     frame.addInternalFrameListener(new InternalFrameAdapter() {
-        public void internalFrameClosing(InternalFrameEvent e) {
+        @Override
+        public void internalFrameClosing(final InternalFrameEvent e) {
           chooseNextTransition();
         }
       });
     frame.pack();
-    int sz = Math.min(desktop.getWidth() / 3, desktop.getHeight());
+    final int sz = Math.min(desktop.getWidth() / 3, desktop.getHeight());
     frame.setSize(sz, sz);
     chooseNextTransition();
     desktop.add(frame);
     desktop.moveToFront(frame);
   }
 
-  private Object[][] produceTableData(int cols, int rows) {
-    Object[][] res = new Object[rows][];
+  private Object[][] produceTableData(final int cols, final int rows) {
+    final Object[][] res = new Object[rows][];
 
-    Random r = new Random();
+    final Random r = new Random();
 
     for (int i = 0; i < rows; i++) {
-      Object[] row = new Object[cols];
+      final Object[] row = new Object[cols];
       for (int j = 0; j < cols; j++) {
-        row[j] = new Integer(r.nextInt(1000));
+        row[j] = Integer.valueOf(r.nextInt(1000));
       }
       res[i] = row;
     }
@@ -159,28 +160,29 @@ public class Main {
     return res;
   }
 
-  private void populateTree(DefaultMutableTreeNode node, int depth) {
+  private void populateTree(final DefaultMutableTreeNode node, final int depth) {
     node.add(new DefaultMutableTreeNode("A"));
     node.add(new DefaultMutableTreeNode("B"));
     node.add(new DefaultMutableTreeNode("C"));
 
     if (depth > 0) {
-      for (Enumeration e = node.children(); e.hasMoreElements(); ) {
+      for (final Enumeration e = node.children(); e.hasMoreElements(); ) {
         populateTree((DefaultMutableTreeNode) e.nextElement(), depth - 1);
       }
     }
   }
 
-  private void run(String[] args) {
-    JFrame frame = new JFrame("Desktop Demo");
+  private void run(final String[] args) {
+    final JFrame frame = new JFrame("Desktop Demo");
 
     JMenu menu = new JMenu("Actions");
-    JMenuBar menuBar = new JMenuBar();
+    final JMenuBar menuBar = new JMenuBar();
     JMenuItem item;
 
     item = new JMenuItem("Add Table");
     item.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           addWindow(TABLE);
         }
       });
@@ -188,7 +190,8 @@ public class Main {
 
     item = new JMenuItem("Add Tree");
     item.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           addWindow(TREE);
         }
       });
@@ -196,8 +199,9 @@ public class Main {
 
     item = new JMenuItem("Close all");
     item.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
-          Component[] cs = desktop.getComponents();
+        @Override
+        public void actionPerformed(final ActionEvent e) {
+          final Component[] cs = desktop.getComponents();
           for (int i = 0; i < cs.length; i++) {
             chooseNextTransition();
             desktop.remove(cs[i]);
@@ -208,20 +212,22 @@ public class Main {
 
     item = new JMenuItem("Quit");
     item.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           System.exit(0);
         }
       });
     item.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_Q, InputEvent.CTRL_MASK));
     menu.add(item);
-    
+
     menuBar.add(menu);
 
     menu = new JMenu("Options");
     JCheckBoxMenuItem ckitem = new JCheckBoxMenuItem("Enable Scrolling");
     ckitem.setState(true);
     ckitem.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           scrollingEnabled = ((JCheckBoxMenuItem) e.getSource()).getState();
         }
       });
@@ -230,7 +236,8 @@ public class Main {
     ckitem = new JCheckBoxMenuItem("Enable Rotation");
     ckitem.setState(true);
     ckitem.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           rotationEnabled = ((JCheckBoxMenuItem) e.getSource()).getState();
         }
       });
@@ -239,7 +246,8 @@ public class Main {
     ckitem = new JCheckBoxMenuItem("Enable Fades");
     ckitem.setState(true);
     ckitem.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
+        @Override
+        public void actionPerformed(final ActionEvent e) {
           fadesEnabled = ((JCheckBoxMenuItem) e.getSource()).getState();
         }
       });
@@ -251,10 +259,10 @@ public class Main {
 
     desktop = new XTDesktopPane();
     transManager = (XTBasicTransitionManager) desktop.getTransitionManager();
-    frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+    frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
     frame.getContentPane().add(desktop);
 
-    DisplayMode cur = GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice().getDisplayMode();
+    final DisplayMode cur = GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice().getDisplayMode();
     int width = (int) (cur.getWidth() * 0.75f);
     int height = (int) (width * 3.0f / 4.0f);
     if (height >= 95.0f * cur.getHeight()) {
@@ -265,7 +273,7 @@ public class Main {
     frame.setVisible(true);
   }
 
-  public static void main(String[] args) {
+  public static void main(final String[] args) {
     new Main().run(args);
   }
 }
